@@ -144,11 +144,14 @@
  * // update one or several counter columns
  * Post::model()->updateCounters($counters,$condition,$params);
  *
+ * // delete one or several records with the specified primary key(s) and attribute values
+ * Post::model()->deleteByPk($pk,$condition,$params);
+ *
  * // delete all records with the specified condition
  * Post::model()->deleteAll($condition,$params);
  *
- * // delete one or several records with the specified primary key(s) and attribute values
- * Post::model()->deleteByPk($pk,$condition,$params);
+ * // delete all records which match the specified attribute values
+ * Post::model()->deleteAllByAttributes($condition,$params);
  *
  * // check if a record exists with the specified condition
  * Post::model()->exists($condition,$params);
@@ -1721,6 +1724,26 @@ abstract class CActiveRecord extends CModel
 		$builder=$this->getCommandBuilder();
 		$criteria=$builder->createCriteria($condition,$params);
 		$command=$builder->createDeleteCommand($this->getTableSchema(),$criteria);
+		return $command->execute();
+	}
+
+	/**
+	 * Deletes rows which match the specified attribute values.
+	 * See {@link find()} for detailed explanation about $condition and $params.
+	 * @param array list of attribute values (indexed by attribute names) that the active records should match.
+	 * Since version 1.0.8, an attribute value can be an array which will be used to generate an IN condition.
+	 * @param mixed query condition or criteria.
+	 * @param array parameters to be bound to an SQL statement.
+	 * @return CActiveRecord the record found. Null if none is found.
+	 * @since 1.0.9
+	 */
+	public function deleteAllByAttributes($attributes,$condition='',$params=array())
+	{
+		Yii::trace(get_class($this).'.deleteAllByAttributes()','system.db.ar.CActiveRecord');
+		$builder=$this->getCommandBuilder();
+		$table=$this->getTableSchema();
+		$criteria=$builder->createColumnCriteria($table,$attributes,$condition,$params);
+		$command=$builder->createDeleteCommand($table,$criteria);
 		return $command->execute();
 	}
 
