@@ -23,6 +23,7 @@ Version 1.0.9 to be released
 - Enh #509: Enhanced CRequiredValidator to check for empty array value (Qiang)
 - Enh #511: CHtml::activeCheckBox and activeRadioButton should respect the value attribute (Qiang)
 - Enh #512: CHtml::beginForm() is made XHTML-compliant when CSRF is enabled (Qiang)
+- Enh #521: Added CActiveRecord::deleteAllByAttributes() (Qiang)
 - Enh #526: Added CSort::params and CPagination::params to allow customizing additional GET parameters in the generated URLs (Qiang)
 - Enh #534: Allow using slash character as URL suffix when strict parsing is enabled (Qiang)
 - Enh #542: Improved CInputWidget and all its descendant classes so that they can be used in tabular data input (Qiang)
